examples/test/testpolicy8562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8562
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key42: value38
      key48: value1
      key30: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key26: value33
      podSelector:
        matchLabels:
          key11: value8
